--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,7 @@
 <h1>List of Tasks</h1>
 
 <ul>
-  <% @tasks_list.each_with_index do |task, index| %>
-    <% @index = index.to_s %>
-    <li><%= link_to(task, '/tasks/' + @index) %><input type="checkbox"></li>
+  <% @tasks_list.each do |task| %>
+    <li><%= link_to(task.name, task_path(task)) %><input type="checkbox"></li>
   <% end %>
 </ul>
