WIP add migration to fix completed_at type to correct time format to match form datetime_local_field, work on checkboxes

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,7 +9,10 @@
       <% else %>
         <input type="checkbox" name="completed">
       <% end%>
+
       <button type="button" name="delete"><%= link_to "Delete task", "/tasks/#{task.id}/delete/" %></button>
+
+      <button type="button" name="edit"><%= link_to "Edit task", "/tasks/#{task.id}/edit/" %></button>
   <% end %>
 </ul>
 
