--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,7 +5,7 @@
   <%= @task.description %>
 </p>
 
-<h4>Completed? <%= @completed %>
+<h4>Completed? <%# @completed %>
   <% if @task.completed_at != nil %>
     <input type="checkbox" checked name="completed">
   <% else %>
