--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,11 +4,11 @@
   <% @tasks_list.each do |task| %>
     <li>
       <%= link_to(task.title, task_path(task)) %>
-        <% if task.completed == true %>
+        <!-- <% if task.completed == true %>
           <input type="checkbox" checked name="completed">
         <% else %>
           <input type="checkbox" name="completed">
-        <% end%>
+        <% end%> -->
       <%= form_for task do |f| %>
         <%= f.label :completed, "Completed?" %>
         <%= f.check_box :completed %>
@@ -24,7 +24,6 @@
 
       <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
 
-      <%= link_to "Edit", "/tasks/#{task.id}/edit/" %>
     </li>
   <% end %>
 </ul>
