--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,18 +5,15 @@
   <%= @task.description %>
 </p>
 
-<h4>Completed? <%# @completed %>
-  <% if @task.completed_at != nil %>
+<h4>Completed?
+  <% if @task.completed == true %>
     <input type="checkbox" checked name="completed">
   <% else %>
     <input type="checkbox" name="completed">
   <% end%>
-  <!-- <%# check_box(@task, completed, checked_value = "1", unchecked_value = "0")%> -->
 </h4>
 
 <h4>Completed at: <%= @task.completed_at %>
 </h4>
 
-<%# content_tag(:h2) do
-  @tasks_list[@id][:name]
-end %>
+<%= link_to "Edit Task", "/tasks/#{@task.id}/edit/" %>
