Added basic styling, disabled checkboxes on index and show, need to figure out how to link checkbox action to autofill datetime like button on index.

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,9 +7,9 @@
 
 <h4>Completed?
   <% if @task.completed == true %>
-    <input type="checkbox" checked name="completed">
+    <input type="checkbox" checked name="completed" disabled="disabled">
   <% else %>
-    <input type="checkbox" name="completed">
+    <input type="checkbox" name="completed" disabled="disabled">
   <% end%>
 </h4>
 
