--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,11 @@
+body {
+  width: 60vw;
+  margin: 10vh auto;
+}
+
+li {
+  margin-bottom: 5vh;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
