--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,7 +11,7 @@
         <% end%> -->
       <%= form_for task do |f| %>
         <%= f.label :completed, "Completed?" %>
-        <%= f.check_box :completed %>
+        <%= f.check_box :completed, { disabled: "disabled" } %>
       <% end %>
 
       <% if task.completed %>
