--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of Tasks</h1>
 
 <ul>
-  <% @tasks_list.each do |task| %>
+  <% @tasks_list.order(:completed, :updated_at).each do |task| %>
     <li>
       <%= link_to(task.title, task_path(task)) %>
         <!-- <% if task.completed == true %>
