Added gems for OAuth

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,11 +15,11 @@
       <% end %>
 
       <% if task.completed %>
-        <%= button_to("Mark Incomplete", task_completed_path(task),
-      method: :put) %>
+        <%= button_to("Mark Incomplete", task_path(task),
+      method: :patch) %>
       <% else %>
-        <%= button_to("Mark Complete", task_completed_path(task),
-      method: :put) %>
+        <%= button_to("Mark Complete", task_path(task),
+      method: :patch) %>
       <% end%>
 
       <%= link_to "Delete", task_path(task), method: :delete, data: { confirm: "Are you sure you want to delete this task?" } %>
