--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+    <nav>
+      <% if session[:user_id].nil?  %>
+        <h2>You are currently logged out.</h2>
+        <%= button_to "Log In", "/auth/github" %>
+      <% else %>
+        <h2>You are currently logged in.</h2>
+        <%= button_to "Log Out", sessions_path, method: :delete %>
+      <% end %>
+    </nav>
+  </header>
 
 <%= yield %>
 
