--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:error] %>
+  <h3 class="errors">
+    <%= flash[:error] %>
+  </h3>
+<% end %>
+
 <h1>List of Tasks</h1>
 
 <ul>
@@ -15,10 +21,10 @@
       <% end %>
 
       <% if task.completed %>
-        <%= button_to("Mark Incomplete", task_path(task),
+        <%= button_to("Mark Incomplete", task_status_path(task, status: "incomplete"),
       method: :patch) %>
       <% else %>
-        <%= button_to("Mark Complete", task_path(task),
+        <%= button_to("Mark Complete", task_status_path(task, status: "complete"),
       method: :patch) %>
       <% end%>
 
